--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "-": "0.0.1",
     "autoprefixer": "^10.4.14",
     "classnames": "^2.3.2",
+    "immer": "^10.0.2",
     "postcss": "^8.4.21",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
